--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Tour Guide For Hire
+title: Hawthorne Ghost Tour
 email: marina@tourguideforhire.com
 myname: Marina Martinez
 description: > # this means to ignore newlines until "baseurl:"
-  Guiding tours all around Portland, Oregon.
+  The Hawthorne Ghost Tour is a fun, exciting, and educational adventure through the heart of East Portland’s old red light district.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://www.tourguideforhire.com/" # the base hostname & protocol for your site
+url: "http://www.tourhawthorne.com/" # the base hostname & protocol for your site
 twitter_username: tourhawthorne
 
 # Outputting
@@ -13,11 +13,11 @@ permalink:     none
 
 # Build settings
 markdown: kramdown
-ftp_host: 'tourguideforhire.com'
+ftp_host: 'marinarosemartinez.com'
 ftp_dir: '/'
 ftp_passive: false
 
 # optional
 ftp_port: 21                  # default 21
-ftp_username: 'tourguideforhire@marinarosemartinez.com'     # default read from stdin
-ftp_password: 'wu[-}TCGr]=A' # default read from stdin
+ftp_username: 'tourhawthorne@marinarosemartinez.com'     # default read from stdin
+ftp_password: '.g.vdFx[m2v}' # default read from stdin
