--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,2 @@
-# OS
-.DS_Store
-Thumbs.db
-
-# IDEs
-.buildpath
-.project
-.settings/
-.build/
-.idea/
-public/
-nbproject/
-
-# old project
-_old/
-
-.sass-cache
-
-# Vagrant
-.vagrant/
-
-# FE Setup
-.bin/node_modules/
-/node_modules/
-src/node_modules/
-src/npm-debug.log.*
-npm-debug.log
-/npm-debug.log*
-/dist/
-/src/client.config.json
-/styleguide/
-/docs/
-
-/junit.xml
-partials/structure/stylesheet.html
+node_modules/
+dist/
