--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,6 @@
 [build]
-publish = "public"
-command = "hugo"
+  command = "npm run build"
+  publish = "dist"
 
-[context.production.environment]
-HUGO_VERSION = "0.40"
-HUGO_ENV = "production"
-HUGO_ENABLEGITINFO = "true"
+[context.deploy-preview]
+  command = "npm run build-preview"
