--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -15,4 +15,4 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Body", name: "body", widget: "markdown"}
-      - {label: "Menu", name: "menu", widget: "string", default: "main"}
+      - {label: "Menu", name: "menu", widget: "hidden", default: "main"}
